[tool.poetry]
name = "immich-scripts"
version = "0.1.0"
description = ""
authors = ["Marvin Davieds <marvin.davieds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pyyaml = "^6.0.1"
openapi-client = { path = "generated/openapi_client" }
rich = "^13.7.0"

[tool.poetry.scripts]
album2external = "immich_scripts.album2external:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
testcontainers = "^3.7.1"
types-pyyaml = "^6.0.12.12"
mypy = "^1.8.0"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
float_to_top = true


[tool.mypy]
python_version = "3.11"
follow_imports = "normal"
files = []
disallow_any_generics = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
